--- a/docs/userguide/convention/examples/EngMeta.ipynb
+++ b/docs/userguide/convention/examples/EngMeta.ipynb
@@ -35,6 +35,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "Convention(\"EngMeta\")"
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "94d4146a-726c-4c46-aca6-7a771748c864",
    "metadata": {},
    "outputs": [
@@ -155,7 +162,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,17 +363,48 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5524375700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5524375700\">\n",
+       "                        <input id=\"group-ds--5395760600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5395760600\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact : {\"name\": \"Matthias Probst\"}</li><li style=\"list-style-type: none; font-style: italic\">creator : {\"name\": \"Matthias Probst\", \"id\": \"https://orcid.org/0000-0001-8729-0482\", \"role\": \"Researcher\"}</li><li style=\"list-style-type: none; font-style: italic\">pid : {\"id\": \"123\", \"type\": \"other\"}</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">contact : {\"name\": \"Matthias Probst\"}</li><li style=\"list-style-type: none; font-style: italic\">creator : {\"name\": \"Matthias Probst\", \"id\": \"https://orcid.org/0000-0001-8729-0482\", \"role\": \"Researcher\"}</li><li style=\"list-style-type: none; font-style: italic\">pid : {\"id\": \"123\", \"type\": \"other\"}</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -426,9 +464,9 @@
     {
      "data": {
       "text/plain": [
-       "{'file_size': array(10552) <Unit('byte')>,\n",
+       "{'file_size': array(6944) <Unit('byte')>,\n",
        " 'file_type': 'hdf5',\n",
-       " 'checksum': 'e6281ddd9c08648201760e6cc6bdd3ab'}"
+       " 'checksum': '4fc13072171dbb2a68a2cf4249f38565'}"
       ]
      },
      "execution_count": 9,
@@ -465,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
