--- a/docs/userguide/convention/examples/metadata4ing.ipynb
+++ b/docs/userguide/convention/examples/metadata4ing.ipynb
@@ -13,7 +13,15 @@
    "execution_count": 1,
    "id": "5d881134-bc2a-41ef-92cd-4dccc9445ede",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import convention"
@@ -89,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "{'person': <SpecialStandardAttribute[positional/obligatory](\"person\"): \"Person.\">}"
+       "{'person': <SpecialStandardAttribute@__init__[positional/obligatory](\"person\"): \"Person.\">}"
       ]
      },
      "execution_count": 4,
@@ -344,42 +352,72 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6231460000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6231460000\">\n",
+       "                        <input id=\"group-ds--4562357300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4562357300\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-CreatorPerson-6235153700\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-6235153700\">\n",
+       "                        <input id=\"group-ds-CreatorPerson-4563285200\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-CreatorPerson-4563285200\">\n",
        "                        CreatorPerson<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\">\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/first_name-62368262001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/first_name-62368262002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/first_name-45645297001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/first_name-45645297002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/first_name-62368262002\">first_name</label>: [|S8] data=b'Matthias'\n",
+       "                    for=\"ds-2-/CreatorPerson/first_name-45645297002\">first_name</label>: [|S8] data=b'Matthias'\n",
        "                    \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The first name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/firstName\">http://xmlns.com/foaf/0.1/firstName</a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                    <ul id=\"ds-1-/CreatorPerson/last_name-62379460001\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/CreatorPerson/last_name-62379460002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <ul id=\"ds-1-/CreatorPerson/last_name-45661873001\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/CreatorPerson/last_name-45661873002\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
        "                    <label class='h5tb-varname' \n",
-       "                    for=\"ds-2-/CreatorPerson/last_name-62379460002\">last_name</label>: [|S6] data=b'Probst'\n",
+       "                    for=\"ds-2-/CreatorPerson/last_name-45661873002\">last_name</label>: [|S6] data=b'Probst'\n",
        "                    \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">description : The last name of a person</li><li style=\"list-style-type: none; font-style: italic\">iri : <a href=\"http://xmlns.com/foaf/0.1/lastName\">http://xmlns.com/foaf/0.1/lastName</a></li>\n",
        "                </ul>\n",
@@ -428,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
