--- a/docs/userguide/convention/ontologies.ipynb
+++ b/docs/userguide/convention/ontologies.ipynb
@@ -267,17 +267,16 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5807439800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5807439800\">\n",
-       "                        /<span>(3)</span></label>\n",
+       "                        <input id=\"group-ds--5911104200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5911104200\">\n",
+       "                        /<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\">\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/test_dataset-5809596900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/test_dataset-5809600100\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-5809600100\">test_dataset</label>\n",
+       "                <ul id=\"ds-1-/test_dataset-5915922300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/test_dataset-5915928300\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/test_dataset-5915928300\">test_dataset</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -285,45 +284,31 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-grp-5809709000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-5809709000\">\n",
+       "                        <input id=\"group-ds-grp-5916143700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-grp-5916143700\">\n",
        "                        grp<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\">\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-Fan-5810072400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-5810072400\">\n",
+       "                        <input id=\"group-ds-Fan-5917060700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-Fan-5917060700\">\n",
        "                        Fan<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\">\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/grp/Fan/D3-5810836600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/grp/Fan/D3-5810841200\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-5810841200\">D3</label>\n",
+       "                <ul id=\"ds-1-/grp/Fan/D3-5918226800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/grp/Fan/D3-5918231800\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/grp/Fan/D3-5918231800\">D3</label>\n",
        "                <span class=\"h5tb-dims\">300 [mm] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno/#standard_name\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno/#standard_name</span></a> : blade_diameter3</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnits\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://w3id.org/nfdi4ing/metadata4ing#hasUnits</span></a> : mm<a href=\"https://qudt.org/vocab/unit/MilliM\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://qudt.org/vocab/unit/MilliM</span></a></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno/#standard_name\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno/#standard_name</span></a> : blade_diameter3</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnits\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://w3id.org/nfdi4ing/metadata4ing#hasUnits</span></a> : mm<a href=\"https://qudt.org/vocab/unit/MilliM\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://qudt.org/vocab/unit/MilliM</span></a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
        "</ul>\n",
-       "</li>\n",
-       "</ul>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-5812019200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-5812019200\">\n",
-       "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://schema.org/softwareVersion\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://schema.org/softwareVersion</span></a> : 1.2.3a1</li>\n",
-       "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</li>\n",
@@ -372,24 +357,69 @@
      "text": [
       "{\n",
       "  \"@context\": {\n",
-      "    \"foaf\": \"http://xmlns.com/foaf/0.1/\",\n",
+      "    \"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\",\n",
       "    \"m4i\": \"http://w3id.org/nfdi4ing/metadata4ing#\",\n",
-      "    \"prov\": \"http://www.w3.org/ns/prov#\",\n",
-      "    \"rdfs\": \"http://www.w3.org/2000/01/rdf-schema#\",\n",
-      "    \"schema\": \"https://schema.org/\",\n",
+      "    \"schema\": \"http://schema.org/\",\n",
       "    \"ssno\": \"https://matthiasprobst.github.io/ssno/#\"\n",
       "  },\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"Nf4c540d63be54188ae46047f51608de5\",\n",
-      "      \"@type\": \"m4i:NumericalVariable\",\n",
-      "      \"m4i:hasUnits\": \"mm\",\n",
-      "      \"ssno:standard_name\": \"blade_diameter3\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"@id\": \"N3d63bb6ab0a6435cae1f2f4aa9ffab45\",\n",
-      "      \"@type\": \"schema:SoftwareSourceCode\",\n",
-      "      \"schema:softwareVersion\": \"1.2.3a1\"\n",
+      "      \"@id\": \"_:N1\",\n",
+      "      \"@type\": \"hdf5:File\",\n",
+      "      \"hdf5:rootGroup\": {\n",
+      "        \"@id\": \"_:N0\",\n",
+      "        \"@type\": \"hdf5:Group\",\n",
+      "        \"hdf5:member\": [\n",
+      "          {\n",
+      "            \"@id\": \"_:N2\",\n",
+      "            \"@type\": \"hdf5:Group\",\n",
+      "            \"hdf5:member\": {\n",
+      "              \"@id\": \"_:N3\",\n",
+      "              \"@type\": \"hdf5:Group\",\n",
+      "              \"hdf5:member\": {\n",
+      "                \"@id\": \"_:N4\",\n",
+      "                \"@type\": \"hdf5:Dataset\",\n",
+      "                \"hdf5:attribute\": [\n",
+      "                  {\n",
+      "                    \"@id\": \"_:N5\",\n",
+      "                    \"@type\": \"hdf5:Attribute\",\n",
+      "                    \"hdf5:name\": \"standard_name\",\n",
+      "                    \"hdf5:value\": \"blade_diameter3\"\n",
+      "                  },\n",
+      "                  {\n",
+      "                    \"@id\": \"_:N6\",\n",
+      "                    \"@type\": \"hdf5:Attribute\",\n",
+      "                    \"hdf5:name\": \"units\",\n",
+      "                    \"hdf5:value\": \"mm\"\n",
+      "                  }\n",
+      "                ],\n",
+      "                \"hdf5:datatype\": \"H5T_INTEGER\",\n",
+      "                \"hdf5:dimension\": 0,\n",
+      "                \"hdf5:name\": \"/grp/Fan/D3\",\n",
+      "                \"hdf5:size\": 1,\n",
+      "                \"hdf5:value\": {\n",
+      "                  \"@id\": \"https://qudt.org/vocab/unit/MilliM\"\n",
+      "                },\n",
+      "                \"m4i:hasUnits\": {\n",
+      "                  \"@id\": \"https://qudt.org/vocab/unit/MilliM\"\n",
+      "                },\n",
+      "                \"ssno:standard_name\": \"blade_diameter3\"\n",
+      "              },\n",
+      "              \"hdf5:name\": \"/grp/Fan\"\n",
+      "            },\n",
+      "            \"hdf5:name\": \"/grp\"\n",
+      "          },\n",
+      "          {\n",
+      "            \"@id\": \"_:N7\",\n",
+      "            \"@type\": \"hdf5:Dataset\",\n",
+      "            \"hdf5:datatype\": \"H5T_FLOAT\",\n",
+      "            \"hdf5:dimension\": 1,\n",
+      "            \"hdf5:name\": \"/test_dataset\",\n",
+      "            \"hdf5:size\": 3\n",
+      "          }\n",
+      "        ],\n",
+      "        \"hdf5:name\": \"/\"\n",
+      "      }\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -424,90 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"@context\": {\n",
-      "        \"owl\": \"http://www.w3.org/2002/07/owl#\",\n",
-      "        \"rdfs\": \"http://www.w3.org/2000/01/rdf-schema#\",\n",
-      "        \"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\"\n",
-      "    },\n",
-      "    \"@type\": \"hdf5:File\",\n",
-      "    \"hdf5:rootGroup\": {\n",
-      "        \"@type\": \"hdf5:Group\",\n",
-      "        \"hdf5:attribute\": [],\n",
-      "        \"hdf5:name\": \"/\",\n",
-      "        \"hdf5:member\": [\n",
-      "            {\n",
-      "                \"@type\": \"hdf5:Group\",\n",
-      "                \"hdf5:name\": \"/grp\",\n",
-      "                \"hdf5:member\": [\n",
-      "                    {\n",
-      "                        \"@type\": \"hdf5:Group\",\n",
-      "                        \"hdf5:name\": \"/grp/Fan\",\n",
-      "                        \"hdf5:member\": [\n",
-      "                            {\n",
-      "                                \"@type\": \"hdf5:Dataset\",\n",
-      "                                \"hdf5:attribute\": [\n",
-      "                                    {\n",
-      "                                        \"@type\": \"hdf5:Attribute\",\n",
-      "                                        \"hdf5:name\": \"standard_name\",\n",
-      "                                        \"hdf5:value\": \"blade_diameter3\",\n",
-      "                                        \"@id\": \"N3eb46a42433646548b732b6c40aea4a2\"\n",
-      "                                    },\n",
-      "                                    {\n",
-      "                                        \"@type\": \"hdf5:Attribute\",\n",
-      "                                        \"hdf5:name\": \"units\",\n",
-      "                                        \"hdf5:value\": \"mm\",\n",
-      "                                        \"@id\": \"Na116feb50770429d87b8b1381e627b24\"\n",
-      "                                    }\n",
-      "                                ],\n",
-      "                                \"hdf5:name\": \"/grp/Fan/D3\",\n",
-      "                                \"hdf5:size\": \"1\",\n",
-      "                                \"hdf5:datatype\": \"H5T_INTEGER\",\n",
-      "                                \"hdf5:value\": \"300.0\",\n",
-      "                                \"@id\": \"N2e70f2cd0bfd44b786b616b6cf146175\"\n",
-      "                            }\n",
-      "                        ],\n",
-      "                        \"@id\": \"N3a0d28cf79b14ecd9bc83b1eed464aa4\"\n",
-      "                    }\n",
-      "                ],\n",
-      "                \"@id\": \"Nc3ca009343be4d8ba807ba789870d218\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"@type\": \"hdf5:Group\",\n",
-      "                \"hdf5:attribute\": [\n",
-      "                    {\n",
-      "                        \"@type\": \"hdf5:Attribute\",\n",
-      "                        \"hdf5:name\": \"@type\",\n",
-      "                        \"hdf5:value\": \"https://schema.org/SoftwareSourceCode\",\n",
-      "                        \"@id\": \"Na082edd8d11d4d82aa6a1891ccb1337d\"\n",
-      "                    },\n",
-      "                    {\n",
-      "                        \"@type\": \"hdf5:Attribute\",\n",
-      "                        \"hdf5:name\": \"__h5rdmtoolbox_version__\",\n",
-      "                        \"hdf5:value\": \"1.2.3a1\",\n",
-      "                        \"@id\": \"N659c51bf758d4c2ea739b52101f6432f\"\n",
-      "                    }\n",
-      "                ],\n",
-      "                \"hdf5:name\": \"/h5rdmtoolbox\",\n",
-      "                \"@id\": \"N2ac9abf659e14952a903d37370b5752c\"\n",
-      "            },\n",
-      "            {\n",
-      "                \"@type\": \"hdf5:Dataset\",\n",
-      "                \"hdf5:name\": \"/test_dataset\",\n",
-      "                \"hdf5:size\": \"3\",\n",
-      "                \"hdf5:datatype\": \"H5T_FLOAT\",\n",
-      "                \"hdf5:value\": [\n",
-      "                    0.0,\n",
-      "                    0.0,\n",
-      "                    0.0\n",
-      "                ],\n",
-      "                \"@id\": \"Nc9d1de91ee4e4a3ba780d25bbdc7be90\"\n",
-      "            }\n",
-      "        ],\n",
-      "        \"@id\": \"N786d2c6a553a4ed4900dfd5461f70690\"\n",
-      "    },\n",
-      "    \"@id\": \"N6200ae042e484ecd9b9b132846c78557\"\n",
-      "}\n"
+      "{\"@context\": {\"hdf5\": \"http://purl.allotrope.org/ontologies/hdf5/1.8#\", \"units\": \"http://w3id.org/nfdi4ing/metadata4ing#hasUnits\"}, \"@graph\": [{\"@id\": \"_:N9\", \"@type\": \"hdf5:File\", \"hdf5:rootGroup\": {\"@id\": \"_:N8\", \"@type\": \"hdf5:Group\", \"hdf5:member\": [{\"@id\": \"_:N10\", \"@type\": \"hdf5:Group\", \"hdf5:member\": {\"@id\": \"_:N11\", \"@type\": \"hdf5:Group\", \"hdf5:member\": {\"@id\": \"_:N12\", \"@type\": \"hdf5:Dataset\", \"hdf5:attribute\": [{\"@id\": \"_:N13\", \"@type\": \"hdf5:Attribute\", \"hdf5:name\": \"standard_name\", \"hdf5:value\": \"blade_diameter3\"}, {\"@id\": \"_:N14\", \"@type\": \"hdf5:Attribute\", \"hdf5:name\": \"units\", \"hdf5:value\": \"mm\"}], \"hdf5:datatype\": \"H5T_INTEGER\", \"hdf5:dimension\": 0, \"hdf5:name\": \"/grp/Fan/D3\", \"hdf5:size\": 1, \"hdf5:value\": {\"@id\": \"https://qudt.org/vocab/unit/MilliM\"}, \"https://matthiasprobst.github.io/ssno/#standard_name\": \"blade_diameter3\", \"units\": {\"@id\": \"https://qudt.org/vocab/unit/MilliM\"}}, \"hdf5:name\": \"/grp/Fan\"}, \"hdf5:name\": \"/grp\"}, {\"@id\": \"_:N15\", \"@type\": \"hdf5:Dataset\", \"hdf5:datatype\": \"H5T_FLOAT\", \"hdf5:dimension\": 1, \"hdf5:name\": \"/test_dataset\", \"hdf5:size\": 3}], \"hdf5:name\": \"/\"}}]}\n"
      ]
     }
    ],
@@ -568,8 +515,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{rdflib.term.Variable('ds_name'): rdflib.term.Literal('/grp/Fan/D3'), rdflib.term.Variable('ds_size'): rdflib.term.Literal('1')}\n",
-      "{rdflib.term.Variable('ds_name'): rdflib.term.Literal('/test_dataset'), rdflib.term.Variable('ds_size'): rdflib.term.Literal('3')}\n"
+      "{rdflib.term.Variable('ds_name'): rdflib.term.Literal('/grp/Fan/D3'), rdflib.term.Variable('ds_size'): rdflib.term.Literal('1', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#integer'))}\n",
+      "{rdflib.term.Variable('ds_name'): rdflib.term.Literal('/test_dataset'), rdflib.term.Variable('ds_size'): rdflib.term.Literal('3', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#integer'))}\n"
      ]
     }
    ],
@@ -667,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
