--- a/docs/userguide/database/firstSteps.ipynb
+++ b/docs/userguide/database/firstSteps.ipynb
@@ -31,7 +31,15 @@
    "execution_count": 1,
    "id": "c03a9649-c89b-4d0b-b5a3-cff64a6316da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    }
+   ],
    "source": [
     "from h5rdmtoolbox.database import HDF5DBInterface"
    ]
@@ -46,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4d4c6cd6-6262-4abe-af1d-adec503a9b84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Generator\n",
-    "from h5rdmtoolbox.database.lazy import LHDFObject\n",
+    "from typing import List\n",
+    "from h5rdmtoolbox.wrapper.lazy import LHDFObject\n",
     "\n",
     "class MyDBInterface(HDF5DBInterface):\n",
     "\n",
@@ -68,7 +76,7 @@
     "    def find(self, *args, **kwargs) -> LHDFObject:\n",
     "        \"\"\"find (many) objects according to the query parameters\"\"\"\n",
     "        \n",
-    "    def find_one(self, *args, **kwargs) -> Generator[LHDFObject, None, None]:\n",
+    "    def find_one(self, *args, **kwargs) -> List[LHDFObject]:\n",
     "        \"\"\"find (many) objects according to the query parameters\"\"\""
    ]
   },
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f52f38e7-2bb7-402c-bea0-627598671901",
    "metadata": {},
    "outputs": [],
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b131f615-1ebb-43f8-9d4c-bf3c73591060",
    "metadata": {},
    "outputs": [],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "74cc251f-23ca-4f86-b0f9-7f57f7dbd139",
    "metadata": {},
    "outputs": [
@@ -522,10 +530,10 @@
        "0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0\n",
        "Coordinates:\n",
        "  * x        (x) int32 1 2 3 4\n",
-       "  * y        (y) int32 10 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 4</li><li><span class='xr-has-index'>y</span>: 2</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2bdb4185-af11-4e81-bf94-bd3c4c4ae303' class='xr-array-in' type='checkbox' ><label for='section-2bdb4185-af11-4e81-bf94-bd3c4c4ae303' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0.],\n",
+       "  * y        (y) int32 10 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 4</li><li><span class='xr-has-index'>y</span>: 2</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-46cd6fc9-f5b6-49e9-848f-b63c5ecb5fc1' class='xr-array-in' type='checkbox' ><label for='section-46cd6fc9-f5b6-49e9-848f-b63c5ecb5fc1' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0.],\n",
        "       [0., 0.],\n",
        "       [0., 0.],\n",
-       "       [0., 0.]], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-6b77300c-a512-44f0-b31e-e7bf76d2b8a7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6b77300c-a512-44f0-b31e-e7bf76d2b8a7' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>1 2 3 4</div><input id='attrs-193e1fe7-a3c5-4570-8268-53b444289ff8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-193e1fe7-a3c5-4570-8268-53b444289ff8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-846a939c-1383-4031-8c55-7b895d66b138' class='xr-var-data-in' type='checkbox'><label for='data-846a939c-1383-4031-8c55-7b895d66b138' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1, 2, 3, 4])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>10 20</div><input id='attrs-a8ae0c4a-91e8-4ac6-95cc-9216c3574e94' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a8ae0c4a-91e8-4ac6-95cc-9216c3574e94' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-96c36882-d77d-49bd-8bb9-0616d41677b1' class='xr-var-data-in' type='checkbox'><label for='data-96c36882-d77d-49bd-8bb9-0616d41677b1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([10, 20])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e6644b5b-d0e6-4b28-a8f6-8a3d4462d3a2' class='xr-section-summary-in' type='checkbox'  ><label for='section-e6644b5b-d0e6-4b28-a8f6-8a3d4462d3a2' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-55d65795-53be-4d7b-b629-9f2cd0a41607' class='xr-index-data-in' type='checkbox'/><label for='index-55d65795-53be-4d7b-b629-9f2cd0a41607' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([1, 2, 3, 4], dtype=&#x27;int32&#x27;, name=&#x27;x&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-e5bbf6b7-60af-426f-8bb6-8f81d70dc102' class='xr-index-data-in' type='checkbox'/><label for='index-e5bbf6b7-60af-426f-8bb6-8f81d70dc102' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([10, 20], dtype=&#x27;int32&#x27;, name=&#x27;y&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e6b63655-6bcd-426d-a205-5cbc2c460d97' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e6b63655-6bcd-426d-a205-5cbc2c460d97' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       [0., 0.]], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-3ee4a6c2-3393-4272-8cec-9111e4e54060' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3ee4a6c2-3393-4272-8cec-9111e4e54060' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>1 2 3 4</div><input id='attrs-708fd8dc-cde5-490a-a7f5-80488a29ac23' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-708fd8dc-cde5-490a-a7f5-80488a29ac23' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-8b06e481-770a-4b0e-aae9-c2667b5e993d' class='xr-var-data-in' type='checkbox'><label for='data-8b06e481-770a-4b0e-aae9-c2667b5e993d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1, 2, 3, 4])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>10 20</div><input id='attrs-32ac6204-d42f-414a-8b93-f16445ab1dda' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-32ac6204-d42f-414a-8b93-f16445ab1dda' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-18f32e60-b9e9-4974-92d0-eb84d9af5965' class='xr-var-data-in' type='checkbox'><label for='data-18f32e60-b9e9-4974-92d0-eb84d9af5965' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([10, 20])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-86fc81bf-2202-4c52-a596-4ed8340298e8' class='xr-section-summary-in' type='checkbox'  ><label for='section-86fc81bf-2202-4c52-a596-4ed8340298e8' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-fc7f947a-a5ac-4a4d-b3ac-be1fb7c61a3d' class='xr-index-data-in' type='checkbox'/><label for='index-fc7f947a-a5ac-4a4d-b3ac-be1fb7c61a3d' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([1, 2, 3, 4], dtype=&#x27;int32&#x27;, name=&#x27;x&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-e30ca0cb-d2a2-4036-b2ba-694189b3807b' class='xr-index-data-in' type='checkbox'/><label for='index-e30ca0cb-d2a2-4036-b2ba-694189b3807b' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([10, 20], dtype=&#x27;int32&#x27;, name=&#x27;y&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-5b8ef6b9-c70d-4b54-94e0-c7617a0c1751' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-5b8ef6b9-c70d-4b54-94e0-c7617a0c1751' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'my_dataset' (x: 4, y: 2)>\n",
@@ -535,7 +543,7 @@
        "  * y        (y) int32 10 20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3bfc43bf-f896-4a84-b3a2-ed7d7da6144c",
    "metadata": {},
    "outputs": [
@@ -937,7 +945,7 @@
        "0.0\n",
        "Coordinates:\n",
        "    x        int32 4\n",
-       "    y        int32 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-36f5a203-8cd1-42bd-941a-380717c926e0' class='xr-array-in' type='checkbox' ><label for='section-36f5a203-8cd1-42bd-941a-380717c926e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array(0., dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-a57d0df9-c701-4ca1-a592-9b13362ca035' class='xr-section-summary-in' type='checkbox'  checked><label for='section-a57d0df9-c701-4ca1-a592-9b13362ca035' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>x</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>4</div><input id='attrs-c2cf6032-c798-4d84-a9fe-d2dadf643302' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c2cf6032-c798-4d84-a9fe-d2dadf643302' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0e065fb3-142a-4407-923b-0977d32f7b00' class='xr-var-data-in' type='checkbox'><label for='data-0e065fb3-142a-4407-923b-0977d32f7b00' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(4)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>y</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>20</div><input id='attrs-60523c8e-66fd-450b-a7bb-0f33477d0240' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-60523c8e-66fd-450b-a7bb-0f33477d0240' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4a4ea104-a369-4ed1-8044-f3f4a44c68b3' class='xr-var-data-in' type='checkbox'><label for='data-4a4ea104-a369-4ed1-8044-f3f4a44c68b3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(20)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-646f400b-6548-4da3-b58f-9771a8e10048' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-646f400b-6548-4da3-b58f-9771a8e10048' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-71d60391-765a-4a82-addb-60702ae27f54' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-71d60391-765a-4a82-addb-60702ae27f54' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    y        int32 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-806d156f-8924-40a3-8169-6581ab18a02a' class='xr-array-in' type='checkbox' ><label for='section-806d156f-8924-40a3-8169-6581ab18a02a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array(0., dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-53af73a7-6dc1-45be-9dc7-ed514c74f0a2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-53af73a7-6dc1-45be-9dc7-ed514c74f0a2' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>x</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>4</div><input id='attrs-7fdb440a-b2a0-4a65-a36c-090ad783a596' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7fdb440a-b2a0-4a65-a36c-090ad783a596' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-24317566-5baf-460f-b39d-6e62a2e3d8cd' class='xr-var-data-in' type='checkbox'><label for='data-24317566-5baf-460f-b39d-6e62a2e3d8cd' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(4)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>y</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>20</div><input id='attrs-78535e36-f668-48bb-bda6-f3ee8d009ac0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-78535e36-f668-48bb-bda6-f3ee8d009ac0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-09936666-116c-486b-9660-9ea868af8171' class='xr-var-data-in' type='checkbox'><label for='data-09936666-116c-486b-9660-9ea868af8171' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(20)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d46449ff-fbf1-4829-9467-e47122b8fae9' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d46449ff-fbf1-4829-9467-e47122b8fae9' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-43907191-e9d4-43b5-a6dd-905bf981207a' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-43907191-e9d4-43b5-a6dd-905bf981207a' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'my_dataset' ()>\n",
@@ -947,7 +955,7 @@
        "    y        int32 20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
