--- a/docs/userguide/database/hdfDB.ipynb
+++ b/docs/userguide/database/hdfDB.ipynb
@@ -282,24 +282,24 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6478301200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6478301200\">\n",
+       "                        <input id=\"group-ds--7480857400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7480857400\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2024-04-24T20:50:33.477456</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li><li style=\"list-style-type: none; font-style: italic\">timestamp : 2024-04-28T17:09:26.588829</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/pressure1-6482347100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/pressure1-6482349900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/pressure1-6482349900\">pressure1</label>\n",
+       "                <ul id=\"ds-1-/pressure1-7484575500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/pressure1-7484579000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/pressure1-7484579000\">pressure1</label>\n",
        "                    <span class=\"h5tb-dims\">(10) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : -140.3</li><li style=\"list-style-type: none; font-style: italic\">standard_name : pressure</li><li style=\"list-style-type: none; font-style: italic\">units : Pa</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/velocity-6482843200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/velocity-6482845800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-6482845800\">velocity</label>\n",
+       "                <ul id=\"ds-1-/velocity-7485418000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/velocity-7485421800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-7485421800\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 14.2</li><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -307,8 +307,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-contact-6483157600\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-contact-6483157600\">\n",
+       "                        <input id=\"group-ds-contact-7485893900\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-contact-7485893900\">\n",
        "                        contact<span>(0)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">name<a href=\"http://xmlns.com/foaf/0.1/firstName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://xmlns.com/foaf/0.1/firstName</span></a> : John</li><li style=\"list-style-type: none; font-style: italic\">surname<a href=\"http://xmlns.com/foaf/0.1/lastName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">http://xmlns.com/foaf/0.1/lastName</span></a> : Doe</li>\n",
@@ -318,16 +318,16 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-group1-6483532500\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-group1-6483532500\">\n",
+       "                        <input id=\"group-ds-group1-7486483100\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-group1-7486483100\">\n",
        "                        group1<span>(1)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group1/velocity-6484175400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group1/velocity-6484178000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group1/velocity-6484178000\">velocity</label>\n",
+       "                <ul id=\"ds-1-/group1/velocity-7487702000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group1/velocity-7487712600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group1/velocity-7487712600\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(5) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -337,32 +337,32 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-group2-6484432600\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-group2-6484432600\">\n",
+       "                        <input id=\"group-ds-group2-7488741600\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-group2-7488741600\">\n",
        "                        group2<span>(3)</span></label>\n",
        "                  \n",
        "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/pressure2-6485632700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group2/pressure2-6485635400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group2/pressure2-6485635400\">pressure2</label>\n",
+       "                <ul id=\"ds-1-/group2/pressure2-7490642700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group2/pressure2-7490646500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group2/pressure2-7490646500\">pressure2</label>\n",
        "                    <span class=\"h5tb-dims\">(10) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : -10.3</li><li style=\"list-style-type: none; font-style: italic\">standard_name : pressure</li><li style=\"list-style-type: none; font-style: italic\">units : kPa</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/velocity-6486080400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/group2/velocity-6486082800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/group2/velocity-6486082800\">velocity</label>\n",
+       "                <ul id=\"ds-1-/group2/velocity-7491488200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/group2/velocity-7491494500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/group2/velocity-7491494500\">velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(5) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">check_value : 30.2</li><li style=\"list-style-type: none; font-style: italic\">standard_name : velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/group2/z-6486444300\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/group2/z-6486447000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/group2/z-6486447000\">z</label>\n",
+       "                <ul id=\"ds-1-/group2/z-7492431500\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/group2/z-7492436800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/group2/z-7492436800\">z</label>\n",
        "                <span class=\"h5tb-dims\">5.4 [m] (float64)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : z_coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
        "                </ul>\n",
@@ -482,7 +482,7 @@
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/group2/z\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(units=m, standard_name=z_coordinate)>]"
+       "[<LDataset \"/group2/z\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=z_coordinate, units=m)>]"
       ]
      },
      "execution_count": 6,
@@ -511,9 +511,9 @@
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s)>,\n",
-       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(check_value=14.2, units=m/s, standard_name=velocity)>,\n",
-       " <LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>]"
+       "[<LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity)>,\n",
+       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity, check_value=14.2)>,\n",
+       " <LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>]"
       ]
      },
      "execution_count": 7,
@@ -545,7 +545,7 @@
     {
      "data": {
       "text/plain": [
-       "<LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(check_value=14.2, units=m/s, standard_name=velocity)>"
+       "<LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity, check_value=14.2)>"
       ]
      },
      "execution_count": 8,
@@ -578,9 +578,9 @@
     {
      "data": {
       "text/plain": [
-       "[<LGroup \"/group1\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\">,\n",
-       " <LGroup \"/\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\">,\n",
-       " <LGroup \"/group2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\">]"
+       "[<LGroup \"/group1\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\">,\n",
+       " <LGroup \"/\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\">,\n",
+       " <LGroup \"/group2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\">]"
       ]
      },
      "execution_count": 9,
@@ -613,12 +613,12 @@
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>,\n",
-       " <LDataset \"/group2/pressure2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=pressure, check_value=-10.3, units=kPa)>,\n",
-       " <LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s)>,\n",
-       " <LDataset \"/group2/z\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(units=m, standard_name=z_coordinate)>,\n",
-       " <LDataset \"/pressure1\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=pressure, units=Pa, check_value=-140.3)>,\n",
-       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(check_value=14.2, units=m/s, standard_name=velocity)>]"
+       "[<LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>,\n",
+       " <LDataset \"/group2/pressure2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=pressure, units=kPa, check_value=-10.3)>,\n",
+       " <LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity)>,\n",
+       " <LDataset \"/group2/z\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=z_coordinate, units=m)>,\n",
+       " <LDataset \"/pressure1\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(check_value=-140.3, standard_name=pressure, units=Pa)>,\n",
+       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity, check_value=14.2)>]"
       ]
      },
      "execution_count": 10,
@@ -650,9 +650,9 @@
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>,\n",
-       " <LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s)>,\n",
-       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(check_value=14.2, units=m/s, standard_name=velocity)>]"
+       "[<LDataset \"/group2/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=velocity, units=m/s, check_value=30.2)>,\n",
+       " <LDataset \"/group1/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity)>,\n",
+       " <LDataset \"/velocity\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(units=m/s, standard_name=velocity, check_value=14.2)>]"
       ]
      },
      "execution_count": 11,
@@ -684,7 +684,7 @@
     {
      "data": {
       "text/plain": [
-       "[<LDataset \"/group2/pressure2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp0.hdf\" attrs=(standard_name=pressure, check_value=-10.3, units=kPa)>]"
+       "[<LDataset \"/group2/pressure2\" in \"C:\\Users\\Matthias\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_12\\tmp0.hdf\" attrs=(standard_name=pressure, units=kPa, check_value=-10.3)>]"
       ]
      },
      "execution_count": 12,
@@ -849,7 +849,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1cb4f4f8c40>]"
+       "[<matplotlib.lines.Line2D at 0x1da7bcdcd30>]"
       ]
      },
      "execution_count": 16,
