--- a/docs/userguide/wrapper/CreateFile.ipynb
+++ b/docs/userguide/wrapper/CreateFile.ipynb
@@ -17,6 +17,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "using(\"h5py\")"
@@ -173,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
