--- a/docs/userguide/wrapper/DumpFile.ipynb
+++ b/docs/userguide/wrapper/DumpFile.ipynb
@@ -21,6 +21,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<head><style>/*\r\n",
@@ -206,38 +213,69 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4870402600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4870402600\">\n",
+       "                        <input id=\"group-ds--6149892200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6149892200\">\n",
        "                        /<span>(4)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : John</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">contact_person : John</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4872142700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-4872145100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-4872145100\">u</label>\n",
+       "                <ul id=\"ds-1-/u-6152360900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-6152363400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-6152363400\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4872522200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4872524500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4872524500\">v</label>\n",
+       "                <ul id=\"ds-1-/v-6153065800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-6153068500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-6153068500\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4872753600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4872756000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4872756000\">x</label>\n",
+       "                <ul id=\"ds-1-/x-6153451400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-6153455300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-6153455300\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(86) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : x-coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
        "                </ul>\n",
@@ -245,25 +283,24 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-timeAverages-4872932300\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-4872932300\">\n",
+       "                        <input id=\"group-ds-timeAverages-6153731800\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-6153731800\">\n",
        "                        timeAverages<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/timeAverages/u-4873635800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/timeAverages/u-4873638200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-4873638200\">u</label>\n",
+       "                <ul id=\"ds-1-/timeAverages/u-6154723800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/u-6154726500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-6154726500\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/timeAverages/v-4873902700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/timeAverages/v-4873904900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-4873904900\">v</label>\n",
+       "                <ul id=\"ds-1-/timeAverages/v-6155119100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/v-6155122700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-6155122700\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -496,38 +533,69 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4899338600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4899338600\">\n",
+       "                        <input id=\"group-ds--6177946500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6177946500\">\n",
        "                        /<span>(4)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : John</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">contact_person : John</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4900978500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-4900981700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-4900981700\">u</label>\n",
+       "                <ul id=\"ds-1-/u-6179664700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-6179667400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-6179667400\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4901367900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4901370300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4901370300\">v</label>\n",
+       "                <ul id=\"ds-1-/v-6180157900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-6180161900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-6180161900\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4901606000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4901608300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4901608300\">x</label>\n",
+       "                <ul id=\"ds-1-/x-6180487100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-6180489500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-6180489500\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(86) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : x-coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
        "                </ul>\n",
@@ -535,25 +603,24 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-timeAverages-4901792400\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-4901792400\">\n",
+       "                        <input id=\"group-ds-timeAverages-6180704300\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-6180704300\">\n",
        "                        timeAverages<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/timeAverages/u-4902424500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/timeAverages/u-4902426800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-4902426800\">u</label>\n",
+       "                <ul id=\"ds-1-/timeAverages/u-6181633900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/u-6181636600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-6181636600\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/timeAverages/v-4902690800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/timeAverages/v-4902693000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-4902693000\">v</label>\n",
+       "                <ul id=\"ds-1-/timeAverages/v-6182008300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/v-6182010800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-6182010800\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
