--- a/docs/userguide/wrapper/GroupCreation.ipynb
+++ b/docs/userguide/wrapper/GroupCreation.ipynb
@@ -22,6 +22,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "using(\"h5py\")"
@@ -73,7 +80,7 @@
    "source": [
     "# Group exploration\n",
     "\n",
-    "Sometimes it is helpful to get all all groups of a current group:"
+    "Sometimes it is helpful to get all all groups of a current group."
    ]
   },
   {
@@ -97,58 +104,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70a68b4a-6715-46ff-889d-fcc1a7f7ec3a",
+   "id": "ed12c8db-c9c2-4c08-80ea-8068037f562d",
    "metadata": {},
    "source": [
-    "An alternative of exploring HDF5 files in general is the usage of databases. The HDF5 file can serve as a database itself. For this and more on database interfaces, see [here](../database/firstSteps.ipynb))"
+    "With `recursive=True` all subgroups are returned, too, however thedefault is False."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "50de3a0b-2aa6-4832-8d1b-2081dad74a42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from h5rdmtoolbox.database import FileDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c90e3188-bb22-48f3-b7dc-88bc02daa5e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = FileDB(h5.hdf_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "22c37bdb-b7cd-4d58-a59a-2e478e704778",
+   "execution_count": 5,
+   "id": "4cf89676-2d5d-46fe-9b03-f1525b52f3e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<LGroup \"/mygrp\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_2\\tmp1.hdf\">\n"
+      "[<HDF5 wrapper group \"/\" (members: 1, convention: \"h5py\")>, <HDF5 wrapper group \"/mygrp\" (members: 0, convention: \"h5py\")>]\n"
      ]
     }
    ],
    "source": [
-    "for r in db.find({'$name': {'$regex': '.*'}}, recursive=False):\n",
-    "    print(r)"
+    "with h5tbx.File(h5.hdf_filename) as h5:\n",
+    "    print(h5.get_groups(recursive=True))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "976f864d-946f-47a9-bfae-47494a7495a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -167,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
